<resources>
    <string name="app_name">onlineTeach</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">课程日历</string>
    <string name="title_notifications">我的群组</string>
    <string name="title_group_list">分组列表</string>
    <string name="title_personal">个人信息</string>
    <string name="title_bookshelf">我的书架</string>
    <string name="menu_item_icon_description">菜单项图标</string>
    <string name="navigate_arrow_description">导航箭头</string>
    <string name="title_settings">设置</string>
    <string name="dark_mode">深色模式</string>
    <string name="light_mode">浅色模式</string>
    <string name="memo_content">待办事项内容</string>
    <string name="memo_title">待办事项标题</string>
    <string name="save">保存</string>
    <string name="set_reminder">设置提醒</string>
    <string name="add_memo">增加待办</string>
    <string name="no_memos">暂时没有待办</string>
    <string name="mark_as_completed">标记为已完成</string>
</resources>