<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">





    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.onlineteach.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_course_list"
            app:destination="@id/navigation_course_list" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_bookshelf"
            app:destination="@id/navigation_bookshelf" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_group_list"
            app:destination="@id/navigation_group_list" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_memo_list"
            app:destination="@id/navigation_memo_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.onlineteach.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.onlineteach.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_group_chat"
            app:destination="@id/navigation_group_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.example.onlineteach.ui.personalinfo.PersonalInfoFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal_info" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.onlineteach.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_course_list"
        android:name="com.example.onlineteach.ui.course.CourseListFragment"
        android:label="课程列表"
        tools:layout="@layout/fragment_course_list">
        <action
            android:id="@+id/action_navigation_course_list_to_course_detail"
            app:destination="@+id/navigation_course_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_course_detail"
        android:name="com.example.onlineteach.ui.course.CourseDetailFragment"
        android:label="课程详情"
        tools:layout="@layout/fragment_course_detail" />
        
    <fragment
        android:id="@+id/navigation_bookshelf"
        android:name="com.example.onlineteach.ui.bookshelf.BookshelfFragment"
        android:label="书架"
        tools:layout="@layout/fragment_bookshelf" />
        
    <fragment
        android:id="@+id/navigation_group_list"
        android:name="com.example.onlineteach.ui.group.GroupListFragment"
        android:label="分组列表"
        tools:layout="@layout/fragment_group_list">
        <action
            android:id="@+id/action_navigation_group_list_to_navigation_group_chat"
            app:destination="@id/navigation_group_chat" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_group_chat"
        android:name="com.example.onlineteach.ui.group.GroupChatFragment"
        android:label="群组聊天"
        tools:layout="@layout/fragment_group_chat">
        <argument
            android:name="group_id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/navigation_memo_list"
        android:name="com.example.onlineteach.ui.memo.MemoListFragment"
        android:label="备忘录"
        tools:layout="@layout/fragment_memo_list">
        <action
            android:id="@+id/action_navigation_memo_list_to_memo_edit"
            app:destination="@id/navigation_memo_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_memo_edit"
        android:name="com.example.onlineteach.ui.memo.MemoEditFragment"
        android:label="编辑备忘录"
        tools:layout="@layout/fragment_memo_edit">
        <argument
            android:name="memo_id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

</navigation>
